--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "formik": "^2.4.6",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.12"
+    "sass": "^1.77.8",
+    "styled-components": "^6.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
