--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
@@ -16,6 +17,7 @@
     "@mui/material": "^5.16.7",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
+    "graphql": "^16.9.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
