--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.14",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
     "graphql": "^16.9.0",
