--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
     "graphql": "^16.9.0",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
